# doja

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
imports/: README.md
imports/fathom/: LICENSE  README.md  tbprobe.c  tbprobe.h
src/: attacks.rs  bishop.rs  bit_board.rs  bit_move.rs  bitboard.rs  color.rs  command.rs  constants.rs  game_phase.rs  king.rs  knight.rs  kogge_stone.rs  magic.rs  main.rs  mask.rs  masks.rs  move_logic.rs  move_scope.rs  move_type.rs  moves.rs  nnue.rs  pawn.rs  perft.rs  pesto.rs  piece_attacks.rs  random_magic.rs  rook.rs  search.rs  shift.rs  squares.rs  tt.rs  uci.rs  utils.rs  zobrist.rs
src/board/: bitboard.rs  bits.rs  board.rs  board_state.rs  castling.rs  fen.rs  major.rs  mod.rs  occupancies.rs  piece.rs  piece_map.rs  state.rs
src/magic/: attacks.rs  mod.rs  number.rs  plain.rs
src/move_logic/: bitmove.rs  move_action.rs  move_list.rs  move_picker.rs  move_stack.rs  scored_move.rs
src/nnue/: accumulator.rs  accumulator_ptr.rs  align64.rs  archs.rs  calc.rs  commons.rs  constants.rs  feature_idx.rs  linear_layer.rs  mod.rs  net.rs  network.rs  notes.md  relu.rs  simd.rs  state.rs
src/nnue_/: accumulator.rs  accumulator_ptr.rs  calc.rs  constants.rs  feature_idx.rs  linear_layer.rs  mod.rs  network.rs  quantmoid.rs  relu.rs
src/notes/: dict.md
src/search/: alpha_beta.rs  clock.rs  constants.rs  control.rs  evaluation.rs  gita.rs  gita_tt.rs  lazy_smp.rs  mod.rs  negamax.rs  pv.rs  pv_table.rs  scale.rs  search.rs  search_entry.rs  stack.rs  threadpool.rs  threads.rs  time_control.rs  zerosum.rs
src/search_/: alphabeta.rs  calc.rs  mod.rs  pv.rs
src/syzygy/: bindings.rs  mod.rs  probe.rs
src/tt/: entry.rs  flag.rs  mod.rs  signal.rs  table.rs  threads.rs  tpt.rs
src/uci/: clock.rs  counter.rs  mod.rs  uci.md  uci.tests.rs
src/utils/: lmr.rs  (+3 more)
(+30 files in other folders)
