[package]
name = "chess"
version = "0.1.0"
edition = "2021"


[toolchain]
channel = "nightly"

# feature = "nightly_stdsimd"


[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bitflags = "2.5.0"
derive_more = "0.99.17"
thiserror = "1.0.60"
lazy_static = "1.4.0"
tokio = { version="1.38.0", features=["io-std", "rt"] }
nix = { version="0.29.0", features=["fs"]}