[package]
name = "chess"
version = "0.1.0"
edition = "2021"
authors = ["Tolumide Shopein"]
repository = ""
license = "MIT"
readme = "readme.md"
keywords = ["chess", "nnue"]
description = "A simple Rust chess engine"
categories = ["game", "board game"]


[profile.release]
debug = true



# [features]
# syzygy = ["dep:cc"]
# bindgen = ["dep:bindgen"]

[build-dependencies]
# cc = { version = "1.0", optional = true}
# bindgen = { version = "0.70.1", optional = true }
cc = "1.0"
bindgen = { version = "0.70.1", features = ["experimental"] }



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bitflags = "2.5.0"
derive_more = "0.99.17"
thiserror = "1.0.60"
lazy_static = "1.4.0"
tokio = { version="1.38.0", features=["io-std", "rt"] }
arrayvec = "0.7.6"